--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
     "react": "^0.11.2",
     "react-router": "^0.9.0",
     "del": "^0.1.3"
+  },
+  "devDependencies": {
+    "express": "^4.7.2",
+    "morgan": "^1.2.2",
+    "browser-sync": "^1.5.8"
   }
 }
