--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
     "gulp-streamify": "0.0.5",
     "react": "^0.12.0",
     "react-router": "^0.10.0",
-    "del": "^0.1.3"
+    "del": "^0.1.3",
+    "underscore": "^1.7.0",
+    "humps": "0.0.1",
+    "when": "^3.6.0",
+    "superagent": "^0.20.0",
+    "reflux": "^0.1.15",
+    "moment": "^2.8.3"
   },
   "devDependencies": {
     "express": "^4.7.2",
