--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "node": ">=0.10.26"
   },
   "dependencies": {
+    "express": "^4.10.2",
+    "morgan": "^1.5.0",
     "browserify": "^5.10.0",
     "gulp": "^3.8.8",
     "gulp-rename": "^1.2.0",
@@ -33,11 +35,16 @@
     "when": "^3.6.0",
     "superagent": "^0.20.0",
     "reflux": "^0.1.15",
-    "moment": "^2.8.3"
+    "moment": "^2.8.3",
+    "body-parser": "^1.9.2",
+    "method-override": "^2.3.0",
+    "compression": "^1.2.0"
   },
   "devDependencies": {
-    "express": "^4.7.2",
-    "morgan": "^1.2.2",
-    "browser-sync": "^1.5.8"
+    "browser-sync": "^1.5.8",
+    "supervisor": "^0.6.0"
+  },
+  "scripts": {
+    "start": "supervisor server.js"
   }
 }
