--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "watchify": "^1.0.2",
     "reactify": "^0.14.0",
     "gulp-if": "^1.2.4",
-    "gulp-imagemin": "git://github.com/jakemmarsh/gulp-imagemin.git#master",
     "gulp-notify": "^1.6.0",
     "gulp-streamify": "0.0.5",
     "react": "^0.12.0",
@@ -38,13 +37,15 @@
     "moment": "^2.8.3",
     "body-parser": "^1.9.2",
     "method-override": "^2.3.0",
-    "compression": "^1.2.0"
+    "compression": "^1.2.0",
+    "gulp-imagemin": "^2.0.0"
   },
   "devDependencies": {
     "browser-sync": "^1.5.8",
     "supervisor": "^0.6.0"
   },
   "scripts": {
-    "start": "supervisor server.js"
+    "start": "supervisor server.js",
+    "postinstall": "gulp prod"
   }
 }
