--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "react": "^0.12.0",
     "react-router": "^0.10.0",
     "del": "^0.1.3",
-    "underscore": "^1.7.0",
     "humps": "0.0.1",
     "when": "^3.6.0",
     "superagent": "^0.20.0",
@@ -39,7 +38,8 @@
     "method-override": "^2.3.0",
     "compression": "^1.2.0",
     "gulp-imagemin": "^2.0.0",
-    "jquery": "^2.1.1"
+    "jquery": "^2.1.1",
+    "lodash": "^2.4.1"
   },
   "devDependencies": {
     "supervisor": "^0.6.0"
