--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "private": true,
   "engines": {
-    "node": ">=0.10.26"
+    "node": "0.10.x"
   },
   "dependencies": {
     "express": "^4.10.2",
@@ -27,7 +27,7 @@
     "gulp-notify": "^1.6.0",
     "gulp-streamify": "0.0.5",
     "react": "^0.12.0",
-    "react-router": "^0.10.0",
+    "react-router": "^0.11.6",
     "del": "^0.1.3",
     "humps": "0.0.1",
     "when": "^3.6.0",
