--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "compression": "^1.2.0",
     "gulp-imagemin": "^2.0.0",
     "jquery": "^2.1.1",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "bootstrap-tokenfield": "^0.12.0"
   },
   "devDependencies": {
     "supervisor": "^0.6.0"
