--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "gulp-imagemin": "^2.0.0",
     "jquery": "^2.1.1",
     "lodash": "^2.4.1",
-    "bootstrap-tokenfield": "^0.12.0"
+    "bootstrap-tokenfield": "^0.12.0",
+    "gulp-awspublish": "0.0.24",
+    "gulp-cdnizer": "^1.1.1"
   },
   "devDependencies": {
     "supervisor": "^0.6.0"
