--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "lodash": "^2.4.1",
     "bootstrap-tokenfield": "^0.12.0",
     "gulp-awspublish": "0.0.24",
-    "gulp-cdnizer": "^1.1.1"
+    "gulp-cdnizer": "^1.1.1",
+    "email-validator": "^1.0.1"
   },
   "devDependencies": {
     "supervisor": "^0.6.0"
