--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "bootstrap-tokenfield": "^0.12.0",
     "gulp-awspublish": "0.0.24",
     "gulp-cdnizer": "^1.1.1",
-    "email-validator": "^1.0.1"
+    "email-validator": "^1.0.1",
+    "xml2js": "^0.4.4"
   },
   "devDependencies": {
     "supervisor": "^0.6.0"
