--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "gulp-cdnizer": "^1.1.1",
     "email-validator": "^1.0.1",
     "xml2js": "^0.4.4",
-    "react-masonry-mixin": "git://github.com/jakemmarsh/react-masonry-mixin.git#master",
+    "react-masonry-mixin": "jakemmarsh/react-masonry-mixin",
     "pikaday": "^1.3.1"
   },
   "devDependencies": {
