--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "PunditTracker-Web",
   "version": "0.0.1",
   "author": "Jake Marsh <jakemmarsh@gmail.com>",
+  "main": "./server",
   "repository": {
     "type": "git",
     "url": "https://github.com/PunditTracker/web"
@@ -48,11 +49,8 @@
     "react-masonry-mixin": "jakemmarsh/react-masonry-mixin",
     "pikaday": "^1.3.1"
   },
-  "devDependencies": {
-    "supervisor": "^0.6.0"
-  },
   "scripts": {
-    "start": "supervisor server.js",
-    "postinstall": "gulp prod"
+    "start": "node server.js",
+    "postinstall": "node node_modules/.bin/gulp prod"
   }
 }
