--- a/.ebextensions/dependencies.config
+++ b/.ebextensions/dependencies.config
@@ -1,7 +1,11 @@
-packages:
-  yum:
-    git: []
-    openssl-devel: []
-    expat-devel: []
-    gettext-devel: []
-    zlib-devel: []
+{
+  "packages": {
+    "yum": {
+      "git": []
+      "openssl-devel": []
+      "expat-devel": []
+      "gettext-devel": []
+      "zlib-devel": []
+    }
+  }
+}
