--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "dependencies": {
     "express": "^4.10.2",
     "morgan": "^1.5.0",
+    "body-parser": "^1.9.2",
+    "method-override": "^2.3.0",
+    "compression": "^1.2.0"
+  },
+  "devDependencies": {
     "browserify": "^5.10.0",
     "gulp": "^3.8.8",
     "gulp-rename": "^1.2.0",
@@ -35,9 +40,6 @@
     "superagent": "^0.20.0",
     "reflux": "^0.1.15",
     "moment": "^2.9.0",
-    "body-parser": "^1.9.2",
-    "method-override": "^2.3.0",
-    "compression": "^1.2.0",
     "gulp-imagemin": "^2.0.0",
     "jquery": "^2.1.1",
     "lodash": "^2.4.1",
@@ -47,10 +49,10 @@
     "email-validator": "^1.0.1",
     "xml2js": "^0.4.4",
     "react-masonry-mixin": "jakemmarsh/react-masonry-mixin",
-    "pikaday": "^1.3.1"
+    "pikaday": "^1.3.1",
+    "gulp-shell": "^0.3.0"
   },
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "node node_modules/.bin/gulp prod"
+    "start": "node server.js"
   }
 }
