--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "email-validator": "^1.0.1",
     "xml2js": "^0.4.4",
     "react-masonry-mixin": "jakemmarsh/react-masonry-mixin",
-    "pikaday": "^1.3.1",
-    "gulp-shell": "^0.3.0"
+    "pikaday": "^1.3.1"
   },
   "scripts": {
     "start": "node server.js"
