--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "email-validator": "^1.0.1",
     "xml2js": "^0.4.4",
     "react-masonry-mixin": "jakemmarsh/react-masonry-mixin",
-    "pikaday": "^1.3.1"
+    "pikaday": "^1.3.1",
+    "gulp-replace": "^0.5.3",
+    "gulp-shell": "^0.3.0"
   },
   "scripts": {
     "start": "node server.js"
