--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-masonry-mixin": "jakemmarsh/react-masonry-mixin",
     "pikaday": "^1.3.1",
     "gulp-replace": "^0.5.3",
-    "gulp-shell": "^0.3.0"
+    "gulp-shell": "^0.3.0",
+    "classnames": "^1.1.4"
   },
   "scripts": {
     "start": "node server.js",
