--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "reactify": "^0.14.0",
     "reflux": "^0.1.15",
     "run-sequence": "^0.3.6",
+    "serve-favicon": "^2.2.0",
     "superagent": "^0.20.0",
     "vinyl-source-stream": "^0.1.1",
     "watchify": "^1.0.2",
@@ -58,7 +59,10 @@
     "xml2js": "^0.4.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "supervisor server.js",
     "postinstall": "gulp dev"
+  },
+  "devDependencies": {
+    "supervisor": "^0.6.0"
   }
 }
