--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "xml2js": "^0.4.4"
   },
   "scripts": {
-    "start": "supervisor server.js",
+    "start": "supervisor -w js,. server.js",
     "postinstall": "gulp dev"
   },
   "devDependencies": {
