--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react": "^0.12.0",
     "react-async": "^2.1.0",
     "react-document-title": "^1.0.2",
-    "react-masonry-mixin": "jakemmarsh/react-masonry-mixin",
+    "react-masonry-mixin": "^0.5.6",
     "react-router": "^0.11.6",
     "reactify": "^0.14.0",
     "reflux": "^0.1.15",
