--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "private": true,
   "engines": {
-    "node": "0.10.x"
+    "node": "0.10.x",
+    "npm": "2.1.x"
   },
   "dependencies": {
     "babelify": "^5.0.4",
