--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "vinyl-source-stream": "^0.1.1",
     "watchify": "^1.0.2",
     "when": "^3.6.0",
-    "xml2js": "^0.4.4"
+    "xml2js": "^0.4.4",
+    "yargs": "^3.8.0"
   },
   "scripts": {
     "start": "supervisor -w js,. server.js",
