--- a/package.json
+++ b/package.json
@@ -13,29 +13,14 @@
     "npm": "2.1.x"
   },
   "dependencies": {
-    "babelify": "^5.0.4",
     "body-parser": "^1.9.2",
     "bootstrap-tokenfield": "^0.12.0",
-    "browserify": "^5.10.0",
     "classnames": "^1.1.4",
     "compression": "^1.2.0",
     "del": "^0.1.3",
     "email-validator": "^1.0.1",
     "express": "^4.10.2",
     "fibers": "^1.0.5",
-    "gulp": "^3.8.8",
-    "gulp-awspublish": "0.0.24",
-    "gulp-cdnizer": "^1.1.2",
-    "gulp-if": "^1.2.4",
-    "gulp-imagemin": "^2.0.0",
-    "gulp-notify": "^1.6.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-replace": "^0.5.3",
-    "gulp-sass": "^1.3.x",
-    "gulp-shell": "^0.3.0",
-    "gulp-streamify": "0.0.5",
-    "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.1",
     "humps": "0.0.1",
     "jquery": "^2.1.1",
     "lodash": "^2.4.1",
@@ -49,22 +34,35 @@
     "react-document-title": "^1.0.2",
     "react-masonry-mixin": "^0.5.6",
     "react-router": "^0.11.6",
-    "reactify": "^0.14.0",
     "reflux": "^0.1.15",
-    "run-sequence": "^0.3.6",
     "serve-favicon": "^2.2.0",
     "superagent": "^0.20.0",
+    "when": "^3.6.0",
+    "xml2js": "^0.4.4"
+  },
+  "devDependencies": {
+    "babelify": "^5.0.4",
+    "browserify": "^5.10.0",
+    "gulp": "^3.8.8",
+    "gulp-awspublish": "0.0.24",
+    "gulp-cdnizer": "^1.1.2",
+    "gulp-if": "^1.2.4",
+    "gulp-imagemin": "^2.0.0",
+    "gulp-notify": "^1.6.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-replace": "^0.5.3",
+    "gulp-sass": "^1.3.x",
+    "gulp-shell": "^0.3.0",
+    "gulp-streamify": "0.0.5",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1",
+    "reactify": "^0.14.0",
+    "run-sequence": "^0.3.6",
     "vinyl-source-stream": "^0.1.1",
     "watchify": "^1.0.2",
-    "when": "^3.6.0",
-    "xml2js": "^0.4.4",
     "yargs": "^3.8.0"
   },
   "scripts": {
-    "start": "supervisor -w js,. server.js",
-    "postinstall": "gulp dev"
-  },
-  "devDependencies": {
-    "supervisor": "^0.6.0"
+    "start": "node server.js"
   }
 }
