update ebs-deploy config

--- a/ebs.config
+++ b/ebs.config
@@ -6,7 +6,7 @@ aws:
     bucket_path: 'pundittracker-web'
 
 app:
-    versions_to_keep: 10
+    versions_to_keep: 2
     app_name: 'pundittracker-web'
     description: 'The web client for PunditTracker.com.'
 
@@ -14,12 +14,20 @@ app:
         solution_stack_name: '64bit Amazon Linux running Node.js'
 
         option_settings:
-
             'aws:elasticbeanstalk:application':
                 Application Healthcheck URL: '/'
 
-    environments:
+        # instructions on how to build the application archive
+        archive:
+            excludes: # files to exclude, a list of regex
+                - '^.gitignore$'
+                - '^\.git*'
+                - '.*\.zip$'
+                - 'app\/'
+                - 'gulp\/'
+                - 'node_modules\/'
 
+    environments:
         # the Testing version of the app
         'pundittracker-web-dev':
             cname_prefix: 'pundittracker-web-dev'
