--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "private": true,
   "engines": {
-    "node": "0.10.x",
-    "npm": "2.1.x"
+    "node": "^0.12.x",
+    "npm": "^2.1.x"
   },
   "dependencies": {
+    "babel": "^5.3.2",
     "body-parser": "^1.9.2",
     "bootstrap-tokenfield": "^0.12.0",
     "classnames": "^1.1.4",
@@ -27,14 +28,13 @@
     "method-override": "^2.3.0",
     "moment": "^2.9.0",
     "morgan": "^1.5.0",
-    "node-jsx": "^0.12.4",
     "pikaday": "^1.3.1",
-    "react": "^0.12.0",
+    "react": "^0.13.3",
     "react-async": "^2.1.0",
     "react-document-title": "^1.0.2",
     "react-masonry-mixin": "^0.5.6",
-    "react-router": "^0.11.6",
-    "reflux": "^0.1.15",
+    "react-router": "^0.13.3",
+    "reflux": "^0.2.7",
     "serve-favicon": "^2.2.0",
     "superagent": "^0.20.0",
     "when": "^3.6.0",
@@ -58,11 +58,13 @@
     "gulp-util": "^3.0.1",
     "reactify": "^0.14.0",
     "run-sequence": "^0.3.6",
+    "supervisor": "^0.6.0",
     "vinyl-source-stream": "^0.1.1",
     "watchify": "^1.0.2",
     "yargs": "^3.8.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "supervisor server.js"
   }
 }
