--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "moment": "^2.9.0",
     "morgan": "^1.5.0",
     "pikaday": "^1.3.1",
-    "react": "^0.13.3",
+    "react": "^0.12.x",
     "react-async": "^2.1.0",
     "react-document-title": "^1.0.2",
     "react-masonry-mixin": "^0.5.6",
-    "react-router": "^0.13.3",
+    "react-router": "^0.11.6",
     "reflux": "^0.2.7",
     "serve-favicon": "^2.2.0",
     "superagent": "^0.20.0",
