convert to dotenv logic

--- a/ebs.config
+++ b/ebs.config
@@ -26,6 +26,7 @@ app:
                 - 'app\/'
                 - 'gulp\/'
                 - 'node_modules\/'
+                - '^.env$'
 
     environments:
         # the Testing version of the app
