--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pikaday": "^1.3.1",
     "react": "^0.12.x",
     "react-async": "^2.1.0",
+    "react-d3": "^0.3.1",
     "react-document-title": "^1.0.2",
     "react-masonry-mixin": "^0.5.6",
     "react-router": "^0.11.6",
