--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "xml2js": "^0.4.4"
   },
   "devDependencies": {
+    "babel-eslint": "^3.1.9",
     "babelify": "^5.0.4",
     "browserify": "^5.10.0",
     "envify": "^3.4.0",
